--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
