--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "chokidar-cli": "^1.2.0",
     "cpr": "^2.0.0",
     "enzyme": "^2.4.1",
+    "eslint": "^3.17.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "http-server": "^0.9.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.1",
