ESlint cleanup; add router template

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,9 @@
     },
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "no-underscore-dangle": "warn"
+        // For redux chrome dev tools
+        "no-underscore-dangle": "warn",
+        // For redux connect()
+        "import/no-named-as-default": 0
     }
 }
