--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
   "dependencies": {
     "axios": "^0.15.3",
     "isomorphic-fetch": "^2.2.1",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
-    "react-router": "^4.0.0-alpha.4",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "steamid": "^1.1.0"
