--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-preset-es2015": "^6.13.1",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.5.1",
     "chokidar-cli": "^1.2.0",
     "cpr": "^2.0.0",
@@ -72,7 +73,6 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "steamid": "^1.1.0"
+    "redux-thunk": "^2.1.0"
   }
 }
