--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "thinkful-react-starter",
+  "name": "steam-battle",
   "version": "0.0.1",
-  "description": "A React template",
+  "description": "Compare two Steam profiles and see which is more hardcore!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gilmoreg/steam-battle.git"
+  },
   "main": "js/index.js",
   "scripts": {
     "start": "http-server -c-1 build",
@@ -37,8 +41,8 @@
     "watch:assets": "run-s build:assets _watch:assets",
     "_watch:assets": "chokidar assets/**/* -c \"npm run build:assets\""
   },
-  "author": "Joe Turner <joe@oampo.co.uk>",
-  "license": "UNLICENSED",
+  "author": "Grayson Gilmore <gilmoreg@live.com>",
+  "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-loader": "^6.2.4",
@@ -61,6 +65,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.1",
     "npm-run-all": "^3.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
