--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "http-server": "^0.9.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.1",
+    "moxios": "^0.3.0",
     "npm-run-all": "^3.0.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
