--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "http-server": "^0.9.0",
     "mkdirp": "^0.5.1",
