--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "moxios": "^0.3.0",
     "npm-run-all": "^3.0.0",
     "react-addons-test-utils": "^15.4.2",
+    "redux-mock-store": "^1.2.2",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
