--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
