--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "axios": "^0.15.3",
     "lodash.debounce": "^4.0.8",
     "react": "^15.4.2",
+    "react-bootstrap-typeahead": "^1.2.0",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
