--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "axios": "^0.15.3",
     "lodash.debounce": "^4.0.8",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
